# arkham

./: .gitignore  README.md  demo.ipynb  for_evaluation.txt  pyproject.toml  readme.md
arkham/: OCRmodule.py  QAmodule.py  constants.py  requirements.txt  utils.py
parsed/: CONTRATO_AP000000718.txt
research/: OCR_development.ipynb  model_contrasts.ipynb  model_finetune.ipynb
