[tool.poetry]
name = "arkham"
version = "0.1.0"
description = "Arkham API containing funcitonality for OCR document parsing and LLMs based chatbots."
authors = ["IsaidMosqueda <isaid_herondale@ciencias.unam.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.240"
pdf2image = "1.16.3"
peft = "0.4.0"
pypdf2 = "3.0.1"
pytesseract = "0.3.10"
torch = "2.0.1"
transformers = "4.31.0"
unstructured = "0.8.1"
chromadb = ">=0.4.2,<0.5.0"
einops = ">=0.6.1,<0.7.0"
accelerate = ">=0.21.0,<0.22.0"
xformers = ">=0.0.20,<0.1.0"
openai = ">=0.27.8,<0.28.0"
evaluate = ">=0.4.0,<0.5.0"
sentence-transformers = ">=2.2.2,<2.3.0"
unstructured-inference = "^0.5.6"
rouge-score = "^0.1.2"
tiktoken = "^0.4.0"
bitsandbytes = "^0.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
